--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -22,6 +22,8 @@ a {
   align-items: center;
   box-sizing: border-box;
   padding: 0 40px;
+  height: 100px;
+  min-height: 100px;
 }
 
 .navLinks {
@@ -33,7 +35,6 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
 }
 
 .booksHolder {
