--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -9,7 +9,7 @@ body {
 
 #root {
   width: 80%;
-  min-height: 80% !important;
+  min-height: 80%;
   margin-top: 4rem;
   margin-bottom: 4rem;
   border-radius: 4px;
