--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -15,6 +15,7 @@
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   color: #0290ff;
+  padding-left: 20px;
 }
 
 .navLinks {
@@ -42,7 +43,7 @@
   font-weight: 500;
   letter-spacing: 1.9px;
   color: #121212;
-  opacity: 1 !important;
+  opacity: 1;
 }
 
 .person-circle {
